# precept

./: .env.example  .gitignore  BUILD_FIXES.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  E2E.md  MILESTONES.md  Makefile  PLAN.md  README.md  README_whatsapp.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  pyproject.toml
backend/apps/communication/: tasks.py
backend/apps/communication/api/: activities.py  call_logs.py  comments.py  events.py  notes.py  notifications.py  router.py  schemas.py  tasks.py
backend/apps/communication/models/: __init__.py  call_log.py  comment.py  event.py  note.py  notification.py  status_change_log.py  task.py
backend/apps/communication/services/: status_change.py
backend/apps/core/: admin.py
backend/apps/core/api/: data_import.py  router.py  schemas.py  translations.py
backend/apps/core/middleware/: tenant.py
backend/apps/core/models/: __init__.py  company.py  mixins.py  user.py
backend/apps/crm/: admin.py
backend/apps/crm/api/: contacts.py  deals.py  leads.py  organizations.py  products.py  router.py  sla.py
backend/apps/crm/models/: __init__.py  classification.py  contact.py  deal.py  lead.py  organization.py  product.py  sla.py  status.py
backend/apps/integrations/: MAILING.md  WHATSAPP.md  tasks.py
backend/apps/realtime/: apps.py  consumers.py  middleware.py  routing.py  utils.py
backend/apps/settings/: apps.py
backend/apps/views/: apps.py
backend/config/: asgi.py  celery.py  db_router.py  urls.py
backend/config/settings/: base.py  development.py  production.py  test.py
(+464 files in other folders)
